# gaia

./: README.md
gaia-epochfit/: README.md  pyproject.toml
gaia-epochfit/examples/: quickstart.py
gaia-epochfit/notebooks/: Tutorial.ipynb
gaia-epochfit/src/gaia_epochfit/: __init__.py  cli.py  gaia_epochs.py  pipeline.py  resolve.py  utils.py  visualize.py
gaia-epochfit/src/gaia_epochfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gaia-epochfit/src/gaia_epochfit/backends/: exoplanet_backend.py  octofitter_backend.py  orbitize_backend.py  orvara_backend.py
gaia-epochfit/tests/: test_offsets.py
gaia_HWO_targets/: DI_STARS_EXEP_2024.10.03_21.53.05.csv  HWO_target_analysis.ipynb  astrometry_detection_mod.pptx
gaia_HWO_targets/.ipynb_checkpoints/: HWO_target_analysis-checkpoint.ipynb
gaia_exoplanet_demographics/: exoplanet_demographics.ipynb  exoplanet_demographics_wGaia_150pc_mod.pptx  exoplanet_demographics_wGaia_mod.pptx  exoplanet_demographics_wGaia_zoom_10yr_mod.pptx  exoplanet_demographics_wGaia_zoom_150pc_mod.pptx  exoplanet_demographics_wGaia_zoom_mod.pptx  exoplanet_demographics_wfullGaia_Roman_solarsystem_10pc_zoom_mod.pptx  exoplanet_demographics_wfullGaia_Roman_solarsystem_zoom_mod.pptx  exoplanet_demographics_wfullGaia_Roman_zoom_mod.pptx  exoplanet_demographics_wfullGaia_zoom_mod.pptx  sensitivity.py
gaia_exoplanet_demographics/.ipynb_checkpoints/: exoplanet_demographics-checkpoint.ipynb
gaia_sim/: gaia_astrometry.ipynb
gaia_sim/.ipynb_checkpoints/: gaia_astrometry-checkpoint.ipynb
